.happypack/s--1836021191
SyntaxError: Unexpected token (79:42)

[0m [90m 77 | [39m          [33m<[39m[33mCard[39m className[33m=[39m[32m"space-card card"[39m[33m>[39m
 [90m 78 | [39m            [33m<[39m[33mCardMedia[39m[33m>[39m
[31m[1m>[22m[39m[90m 79 | [39m              [33m<[39m[33mimg[39m src[33m=[39m[32m"/default/file.png"[39m}[33m/[39m[33m>[39m
 [90m    | [39m                                          [31m[1m^[22m[39m
 [90m 80 | [39m            [33m<[39m[33m/[39m[33mCardMedia[39m[33m>[39m
 [90m 81 | [39m            [33m<[39m[33mFileStatus[39m title[33m=[39m[32m"EN"[39m[33m/[39m[33m>[39m
 [90m 82 | [39m            [33m<[39m[33mCardTitle[39m title[33m=[39m{[36mthis[39m[33m.[39mtitle([36mthis[39m[33m.[39mprops[33m.[39mrecord[33m.[39mscientificNameSimple)} className[33m=[39m[32m"card-title"[39m subtitle[33m=[39m{[36mthis[39m[33m.[39msubtitle([36mthis[39m[33m.[39mprops[33m.[39mrecord[33m.[39mscientificNameSimple)}[33m/[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Unexpected token (79:42)

[0m [90m 77 | [39m          [33m<[39m[33mCard[39m className[33m=[39m[32m"space-card card"[39m[33m>[39m
 [90m 78 | [39m            [33m<[39m[33mCardMedia[39m[33m>[39m
[31m[1m>[22m[39m[90m 79 | [39m              [33m<[39m[33mimg[39m src[33m=[39m[32m"/default/file.png"[39m}[33m/[39m[33m>[39m
 [90m    | [39m                                          [31m[1m^[22m[39m
 [90m 80 | [39m            [33m<[39m[33m/[39m[33mCardMedia[39m[33m>[39m
 [90m 81 | [39m            [33m<[39m[33mFileStatus[39m title[33m=[39m[32m"EN"[39m[33m/[39m[33m>[39m
 [90m 82 | [39m            [33m<[39m[33mCardTitle[39m title[33m=[39m{[36mthis[39m[33m.[39mtitle([36mthis[39m[33m.[39mprops[33m.[39mrecord[33m.[39mscientificNameSimple)} className[33m=[39m[32m"card-title"[39m subtitle[33m=[39m{[36mthis[39m[33m.[39msubtitle([36mthis[39m[33m.[39mprops[33m.[39mrecord[33m.[39mscientificNameSimple)}[33m/[39m[33m>[39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)